[gd_scene load_steps=15 format=3 uid="uid://cdsfjyfo8mdx0"]

[ext_resource type="Script" path="res://Scenes/Enemy/main_enemy.gd" id="1_ut4tm"]
[ext_resource type="Texture2D" uid="uid://kh2cfq71govx" path="res://Assets/Enemies/raiju.png" id="2_vhjjh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vjc1d"]
atlas = ExtResource("2_vhjjh")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4u5a"]
atlas = ExtResource("2_vhjjh")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_31qee"]
atlas = ExtResource("2_vhjjh")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqyhm"]
atlas = ExtResource("2_vhjjh")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiay8"]
atlas = ExtResource("2_vhjjh")
region = Rect2(288, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_j55xd"]
atlas = ExtResource("2_vhjjh")
region = Rect2(360, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_j206b"]
atlas = ExtResource("2_vhjjh")
region = Rect2(432, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_l8m5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjc1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4u5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31qee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqyhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiay8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j55xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j206b")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qsiq6"]
radius = 12.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgj7w"]
size = Vector2(32, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_drtat"]
radius = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mi5sq"]
radius = 16.0
height = 80.0

[node name="mainEnemy" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_ut4tm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l8m5k")
frame_progress = 0.315918
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qsiq6")

[node name="Jumpzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpzone"]
position = Vector2(24, -22)
shape = SubResource("RectangleShape2D_pgj7w")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(24, 0)
target_position = Vector2(0, 40)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(18, 8)
target_position = Vector2(22, 0)

[node name="attackCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackCheck"]
shape = SubResource("CircleShape2D_drtat")

[node name="PlayerCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(0, 8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mi5sq")

[connection signal="body_entered" from="Jumpzone" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="attackCheck" to="." method="_on_attack_check_area_entered"]
[connection signal="area_exited" from="attackCheck" to="." method="_on_attack_check_area_exited"]
[connection signal="body_entered" from="attackCheck" to="." method="_on_attack_check_body_entered"]
[connection signal="body_entered" from="PlayerCheck" to="." method="_on_player_check_body_entered"]
